vote-result/busybox-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox
  labels:
    app: busybox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
        - name: busybox
          image: busybox
          command: ["/bin/sh", "-c"]
          args:
            ["echo 'Hello from PVC' > /mnt/storage/azurefile.txt && sleep 3600"]
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.25"
              memory: "256Mi"
          volumeMounts:
            - name: busybox-data
              mountPath: /mnt/storage
      volumes:
        - name: busybox-data
          persistentVolumeClaim:
            claimName: busybox
