vote-result/result-service.yml
apiVersion: v1
kind: Service
metadata:
  name: result
  labels:
    app: result
spec:
  type: ClusterIP
  ports:
    - name: http-result
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https-result
      port: 443
      targetPort: 443
      protocol: TCP
  selector:
    app: result
