vote-result/vote-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vote
  labels:
    app: vote
spec:
  type: ClusterIP
  ports:
    - name: http-vote
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https-vote
      port: 443
      targetPort: 443
      protocol: TCP
  selector:
    app: vote
